Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,6 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/dist'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/dist/code-pulse'
     ArtifactName: 'webapp'
     publishLocation: 'Container'
