--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,9 +17,12 @@ steps:
 
 - script: |
     npm install
-    npm run build
+    
   displayName: 'npm install and build'
-
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    customCommand: 'npm run build'
 
 - task: PublishBuildArtifacts@1
   inputs:
