--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
 - task: Npm@1
   inputs:
     command: 'custom'
-    customCommand: 'npm run build'
+    customCommand: 'ng build'
 
 - task: PublishBuildArtifacts@1
   inputs:
