--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,16 @@ steps:
     ng build --prod --configuration production --aot=true --buildOptimizer=true
   displayName: 'npm install and build'
 
+- script: |
+    ng build --prod --configuration production --aot=true --buildOptimizer=true
+  displayName: 'npm install and build'
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
+      echo '$(System.DefaultWorkingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(System.DefaultWorkingDirectory)/dist/code-pulse'
